updated GUI and login of Evidency card and related tabs, db fk added

--- a/ShelterEvidency/Views/DonationsView.xaml
+++ b/ShelterEvidency/Views/DonationsView.xaml
@@ -20,7 +20,7 @@
 
     </UserControl.Resources>
 
-    <Grid Margin="5">
+    <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
