--- a/ShelterEvidency/Views/GeneralCostsView.xaml
+++ b/ShelterEvidency/Views/GeneralCostsView.xaml
@@ -5,13 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
              Background="{DynamicResource MaterialDesignPaper}"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1200">
 
-    <Grid Margin="5">
+    <UserControl.Resources>
+
+        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+
+
+    </UserControl.Resources>
+
+    <Grid Margin="5"  IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -50,12 +59,13 @@
 
 
 
-            <DataGrid Grid.Row="1" Margin="5" ColumnWidth="*" AutoGenerateColumns="False" VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" SelectedValuePath="Id" ItemsSource="{Binding Path=AnimalCosts, Mode=OneWay}" SelectedValue="{Binding Path=SelectedCost, Mode=OneWayToSource}">
+            <DataGrid Grid.Row="1" Margin="5" ColumnWidth="*" AutoGenerateColumns="False" VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=AnimalCosts, Mode=OneWay}" SelectedValue="{Binding Path=SelectedCost, Mode=OneWayToSource}">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID nákladu" MaxWidth="90" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="ID nákladu" MaxWidth="90" Binding="{Binding ID}"/>
                     <DataGridTextColumn Header="Název" MinWidth="200" Binding="{Binding CostName}"/>
                     <DataGridTextColumn Header="Datum" Binding="{Binding Date}"/>
                     <DataGridTextColumn Header="ID zvířete" MaxWidth="90" Binding="{Binding AnimalID}"/>
+                    <DataGridTextColumn Header="Jméno zvířete" MaxWidth="90" Binding="{Binding AnimalName}"/>
                     <DataGridTextColumn Header="Cena" Binding="{Binding Price}"/>
 
                 </DataGrid.Columns>
@@ -153,6 +163,15 @@
             </Grid>
 
         </materialDesign:Card>
+
+        <ProgressBar  
+              Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}, Mode=OneWay}"
+              Grid.RowSpan="2" Grid.ColumnSpan="3"
+              Style="{StaticResource MaterialDesignCircularProgressBar}"
+              Value="0"
+              Height="50"
+              Width="50"
+              IsIndeterminate="True" />
 
 
 
