--- a/ShelterEvidency/Views/StaysView.xaml
+++ b/ShelterEvidency/Views/StaysView.xaml
@@ -4,11 +4,219 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
              Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="800" d:DesignWidth="1200">
+
+    <UserControl.Resources>
+
+        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+
+
+    </UserControl.Resources>
+
+    <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Column="1" Grid.RowSpan="2" Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="90"/>
+                </Grid.ColumnDefinitions>
+
+                <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Since, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
+                <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=To, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
+
+
+                <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
+                x:Name="Filter" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
+                    <materialDesign:PackIcon
+                Kind="Update"
+                Height="30"
+                Width="30" />
+                </Button>
+
+            </Grid>
+
+
+
+            <DataGrid Grid.Row="1" Margin="5" ColumnWidth="*" AutoGenerateColumns="False" VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=AnimalStays, Mode=OneWay}" SelectedValue="{Binding Path=SelectedStay, Mode=OneWayToSource}">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" MaxWidth="50" Binding="{Binding ID}"/>
+                    <DataGridTextColumn Header="Začátek" Binding="{Binding StartDate}"/>
+                    <DataGridTextColumn Header="Konec" Binding="{Binding FinishDate}"/>
+
+                    <DataGridTemplateColumn Header="Adopce">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <materialDesign:PackIcon x:Name="icon" Kind="CheckboxMarked" />
+                                <DataTemplate.Triggers>
+                                    <DataTrigger Binding="{Binding Path=Adopted}" Value="False">
+                                        <Setter Property="Kind" Value="CheckBoxOutlineBlank" TargetName="icon"/>
+                                    </DataTrigger>
+                                </DataTemplate.Triggers>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+
+                    <DataGridTemplateColumn Header="Útěk">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <materialDesign:PackIcon x:Name="icon" Kind="CheckboxMarked" />
+                                <DataTemplate.Triggers>
+                                    <DataTrigger Binding="{Binding Path=Escaped}" Value="False">
+                                        <Setter Property="Kind" Value="CheckBoxOutlineBlank" TargetName="icon"/>
+                                    </DataTrigger>
+                                </DataTemplate.Triggers>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+
+                    <DataGridTemplateColumn Header="Úmrtí">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <materialDesign:PackIcon x:Name="icon" Kind="CheckboxMarked" />
+                                <DataTemplate.Triggers>
+                                    <DataTrigger Binding="{Binding Path=Died}" Value="False">
+                                        <Setter Property="Kind" Value="CheckBoxOutlineBlank" TargetName="icon"/>
+                                    </DataTrigger>
+                                </DataTemplate.Triggers>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+
+                </DataGrid.Columns>
+
+            </DataGrid>
+
+        </Grid>
+
+        <materialDesign:Card Margin="10"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth1">
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="15,10,0,0">
+
+                    <materialDesign:PackIcon Kind="HomeImportOutline" VerticalAlignment="Center" HorizontalAlignment="Center" Width="50" Height="50" Opacity="0.3" Margin="0" />
+
+
+                    <TextBlock VerticalAlignment="Center"  Grid.ColumnSpan="2" HorizontalAlignment="Center"
+                        Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="15,0,0,0">
+                      Vytvořit nový pobyt
+                    </TextBlock>
+
+                </StackPanel>
+
+
+                <Grid Grid.Row="1" Margin="15,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <DatePicker Margin="5" materialDesign:HintAssist.Hint="Datum" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path= NewStayDate, Mode=TwoWay}" SelectedDateFormat="Long"/>
+
+                    <Button x:Name="CreateNewStay" IsEnabled="{Binding CanCreate}" Style="{StaticResource MaterialDesignRaisedAccentButton}" Width="100"  Grid.Row="1" Content="Vytvořit"/>
+                </Grid>
+
+            </Grid>
+        </materialDesign:Card>
+
+        <materialDesign:Card Grid.Row="1" Margin="10"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth1">
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="15,10,0,0">
+
+                    <materialDesign:PackIcon Kind="HomeEditOutline" VerticalAlignment="Center" HorizontalAlignment="Center" Width="50" Height="50" Opacity="0.3" Margin="0" />
+
+
+                    <TextBlock VerticalAlignment="Center"  Grid.ColumnSpan="2" HorizontalAlignment="Center"
+                        Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="15,0,0,0">
+                      Upravit vybraný pobyt
+                    </TextBlock>
+
+                </StackPanel>
+
+                <Grid Grid.Row="1" Margin="15,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition Height="70"/>
+                        <RowDefinition Height="1.3*"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <DatePicker  Margin="5" materialDesign:HintAssist.Hint="Začátek" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Start, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long"/>
+
+                    <DatePicker Grid.Row="1" Margin="5" materialDesign:HintAssist.Hint="Konec" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Finish, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long"/>
+
+                    <GroupBox Header="Zakončení pobytu" Grid.Row="2"  Grid.RowSpan="2" Style="{DynamicResource MaterialDesignGroupBox}"
+                          materialDesign:ShadowAssist.ShadowDepth="Depth3"   BorderThickness="0" Margin="0,10,0,0">
+                        <Grid Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <CheckBox Content="adopce" HorizontalAlignment="Center" Grid.Column="0" IsChecked="{Binding Path = Adopted, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                            <CheckBox Content="útěk"  HorizontalAlignment="Center" Grid.Column="1" IsChecked="{Binding Path = Escaped, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                            <CheckBox Content="úmrtí"  HorizontalAlignment="Center" Grid.Column="2" IsChecked="{Binding Path = Died, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                        </Grid>
+                    </GroupBox>
+
+                    <TextBox x:Name="Note" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Poznámka" Grid.Row="4" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50" Text="{Binding Path=Note, Mode=TwoWay}"/>
+
+                    <Button x:Name="UpdateStay" Style="{StaticResource MaterialDesignRaisedAccentButton}" Width="100"  Grid.Row="5" Content="Upravit"/>
+                </Grid>
+
+            </Grid>
+
+        </materialDesign:Card>
+
+        <ProgressBar  
+              Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}, Mode=OneWay}"
+              Grid.RowSpan="2" Grid.ColumnSpan="3"
+              Style="{StaticResource MaterialDesignCircularProgressBar}"
+              Value="0"
+              Height="50"
+              Width="50"
+              IsIndeterminate="True" />
+
+
+
+    </Grid>
+
+    <!--
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -58,4 +266,5 @@
         <DataGrid Margin="5" Grid.Column="1" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" ItemsSource="{Binding Path=AnimalStays, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" SelectedValuePath="Id" SelectedValue="{Binding Path=SelectedStayID, Mode=OneWayToSource}"/>
 
     </Grid>
+    -->
 </UserControl>
